...
    onMoreClick: () -> Unit,
    modifier: Modifier = Modifier
) {
    TopAppBar(
        title = {
            Text(
                text = "服务器管理",
                style = ForwardTypography.TitleLarge,
                color = AppColors.DarkOnBackground
            )
        },
        modifier = modifier,
        navigationIcon = {
...
